k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birthdaymate-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: birthdaymate
  template:
    metadata:
      labels:
        app: birthdaymate
        version: "v1"
    spec:
      containers:
        - name: birthdaymate
          image: vinaypdb/birthdaymate:latest
          ports:
            - containerPort: 9090
