k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: birthdaymate-service
spec:
  type: NodePort
  selector:
    app: birthdaymate
  ports:
    - port: 80
      targetPort: 9090
      nodePort: 30090  # Exposes app on http://<minikube_ip>:30090
